2012-01-25 Sjur Moshagen <sjurnm@mac.com>
	* Add support for cyrillic alphabet

2012-01-15 Harri Pitkänen <hatapitk@iki.fi>
	* Fix build with MSVC

2012-01-14 Harri Pitkänen <hatapitk@iki.fi>
	* Fix build with GCC 4.7
	* Update version numbers for 3.4.1

2011-12-15 Harri Pitkänen <hatapitk@iki.fi>
	* Be more careful with ordinal ranges.

2011-11-29 Harri Pitkänen <hatapitk@iki.fi>
	* Increase version numbers for 3.4.

2011-11-25 Harri Pitkänen <hatapitk@iki.fi>
	* Add grammar check for missing main verb.

2011-11-18 Harri Pitkänen <hatapitk@iki.fi>
	* Increase initial heap size to a value that is more reasonable
	  for our Finnish morphology.

2011-11-14 Harri Pitkänen <hatapitk@iki.fi>
	* Pointer to a string within Malaga heap was used after garbage
	  collector had compacted the heap, causing corrupted strings.

2011-11-12 Harri Pitkänen <hatapitk@iki.fi>
	* Add grammar check for misplaced conjunctions
	* Fix indexing error that caused some autocorrections to be missed

2011-09-27 Harri Pitkänen <hatapitk@iki.fi>
	* Suggest adding ' for "showssa" -> "show'ssa"

2011-09-27 Flammie Pirinen <flammie@iki.fi>
	* Zhfst version of HFST spellers

2011-09-23 Harri Pitkänen <hatapitk@iki.fi>
	* Do not apply analysis method for null terminated strings for a string that
	  does not have a null terminator.
	* Increase version numbers to 3.3.1.

2011-09-04 Harri Pitkänen <hatapitk@iki.fi>
	* Do not try to fix capitalization of baseforms when there
	  is obvious misalignment between baseform and structure pattern.

2011-09-02 Harri Pitkänen <hatapitk@iki.fi>
	* Pkg-config is now required for build configuration
	* Remove workaround for Lttoolbox bug. Apertium SVN revision 33803 or later
	  of Lttoolbox is now needed for the backend to work properly.

2011-08-17 Harri Pitkänen <hatapitk@iki.fi>
	* Fix tokenizer bug.

2011-07-06 Harri Pitkänen <hatapitk@iki.fi>
	* Fix hyphenation pattern for words starting with hyphen.

2011-07-05 Harri Pitkänen <hatapitk@iki.fi>