@@ -1,3 +1,6 @@
+2012-01-28 Harri Pitkänen <hatapitk@iki.fi>
+	* Add canonical decompositions for Russian and Komi alphabet.
+
 2012-01-25 Sjur Moshagen <sjurnm@mac.com>
 	* Add support for cyrillic alphabet
 
